--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -191,6 +191,46 @@ a {
     display: inline-block;
 }
 
+/*0321 Junyi added hided button*/
+.darkHideButton {
+    background: #045547;
+    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
+    border-radius: 8px;
+    padding: 10px 40px;
+    border: 0px;
+    color: #ffffff;
+    -webkit-appearance: none;
+    font-size: 15px;
+    display: inline-block;
+
+}
+
+.mediumHideButton {
+    background: #1CA68C;
+    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
+    border-radius: 8px;
+    padding: 10px 40px;
+    border: 0px;
+    color: #FFFFFF;
+    -webkit-appearance: none;
+    font-size: 15px;
+    display: inline-block;
+}
+.lightHideButton {
+    background: #E2EEE8;
+    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
+    border-radius: 8px;
+    padding: 10px 40px;
+    border: 0px;
+    color: #045547;
+    -webkit-appearance: none;
+    font-size: 15px;
+    display: inline-block;
+
+}
+/*0321 Junyi added hided button*/
+
+
 .mediumButton {
     background: #1CA68C;
     box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
