Edit the scfeature

--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -134,7 +134,7 @@
                     </button>
                 </div>
                 <div style="display:inline-block; vertical-align:top; margin-top:-5px">
-                    <a id="scfnotify" href="#scfeatureGuide" onclick="showGuide()"><img
+                    <a id="scfnotify" href="#scfeatureGuide" onclick="showGuide()" hidden><img
                             src="{{url_for('static', filename='exclamation-mark-64.png')}}" width="20"
                             height="20" /></a>
                 </div>
