add data page in main app

--- a/flaskstarter/templates/layouts/footer.html
+++ b/flaskstarter/templates/layouts/footer.html
@@ -59,13 +59,18 @@
                 </div>
                 <div class="row justify-content-end" style="margin: 30px 0px; padding:0px;">
                     <div class="mediumauto18" style="color: hsla(169, 91%, 17%, 1)"><a
-                            href="{{ url_for('tasks.contribute') }}"
-                            style="color: hsla(169, 91%, 17%, 1)">Contribute</a></div>
+                            href="{{ url_for('frontend.data') }}" style="color: hsla(169, 91%, 17%, 1)">Data</a>
+                    </div>
                 </div>
                 <div class="row justify-content-end" style="margin: 30px 0px; padding:0px;">
                     <div class="mediumauto18" style="color: hsla(169, 91%, 17%, 1)"><a
                             href="{{ url_for('frontend.tutorial') }}" style="color: hsla(169, 91%, 17%, 1)">Tutorial</a>
                     </div>
+                </div>
+                <div class="row justify-content-end" style="margin: 30px 0px; padding:0px;">
+                    <div class="mediumauto18" style="color: hsla(169, 91%, 17%, 1)"><a
+                            href="{{ url_for('tasks.contribute') }}"
+                            style="color: hsla(169, 91%, 17%, 1)">Contribute</a></div>
                 </div>
                 <div class="row justify-content-end" style="margin: 30px 0px; padding:0px;">
                     <div class="mediumauto18" style="color: hsla(169, 91%, 17%, 1)"><a
