--- a/flaskstarter/templates/layouts/header.html
+++ b/flaskstarter/templates/layouts/header.html
@@ -8,10 +8,13 @@
       <a class="nav-link" href="{{ url_for('tasks.table_view') }}">Explore</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('tasks.contribute') }}">Contribute</a>
+      <a class="nav-link" href="{{ url_for('frontend.data') }}">Data</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('frontend.tutorial') }}">Tutorial</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('tasks.contribute') }}">Contribute</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('frontend.contact_us') }}">Contact us</a>
@@ -50,6 +53,9 @@
         <a class="dropdown-item" href="{{ url_for('tasks.show_plot')}}">Cell type specific gene expression</a>
         <a class="dropdown-item" href="{{ url_for('tasks.show_plot')}}">Cell type specific pathway expression</a>
       </div>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{ url_for('frontend.data') }}">Data</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('frontend.tutorial') }}">Tutorial</a>
