Edit the pre-computed data charateristics

--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -804,6 +804,7 @@ body {
     border: 16px solid #f3f3f3;
     /* Light grey */
     border-top: 16px solid #037966;
+    position:absolute;
     /* Blue */
     border-radius: 50%;
     width: 120px;
