--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -191,46 +191,6 @@ a {
     display: inline-block;
 }
 
-/*0321 Junyi added hided button*/
-.darkHideButton {
-    background: #045547;
-    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
-    border-radius: 8px;
-    padding: 10px 40px;
-    border: 0px;
-    color: #ffffff;
-    -webkit-appearance: none;
-    font-size: 15px;
-    display: inline-block;
-
-}
-
-.mediumHideButton {
-    background: #1CA68C;
-    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
-    border-radius: 8px;
-    padding: 10px 40px;
-    border: 0px;
-    color: #FFFFFF;
-    -webkit-appearance: none;
-    font-size: 15px;
-    display: inline-block;
-}
-.lightHideButton {
-    background: #E2EEE8;
-    box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
-    border-radius: 8px;
-    padding: 10px 40px;
-    border: 0px;
-    color: #045547;
-    -webkit-appearance: none;
-    font-size: 15px;
-    display: inline-block;
-
-}
-/*0321 Junyi added hided button*/
-
-
 .mediumButton {
     background: #1CA68C;
     box-shadow: 0px 8px 16px -2px rgba(35, 101, 89, 0.3);
@@ -804,7 +764,6 @@ body {
     border: 16px solid #f3f3f3;
     /* Light grey */
     border-top: 16px solid #037966;
-    position:absolute;
     /* Blue */
     border-radius: 50%;
     width: 120px;
@@ -936,12 +895,17 @@ body {
     color: #045547;
 }
 
-#distro_data_next {
+#empTable_paginate .previous {
+    margin-right: 15px;
+}
+
+
+#data_download_links_next {
     background-color: #ffffff !important;
 }
 
-#empTable_paginate .previous {
-    margin-right: 15px;
+#distro_data_next {
+    background-color: #ffffff !important;
 }
 
 /*Hidden Form*/
@@ -1007,20 +971,3 @@ body {
     margin-bottom: 45px;
 }
 
-.cookie-alert {
-    position: fixed;
-    bottom: 15px;
-    right: 15px;
-    width: 320px;
-    margin: 0 !important;
-    z-index: 999;
-    opacity: 0;
-    transform: translateY(100%);
-    transition: all 500ms ease-out;
-  }
-  
-  .cookie-alert.show {
-    opacity: 1;
-    transform: translateY(0%);
-    transition-delay: 1000ms;
-  }
