Fix legend bugs

--- a/flaskstarter/templates/tasks/show_scfeature.html
+++ b/flaskstarter/templates/tasks/show_scfeature.html
@@ -90,7 +90,7 @@
         Healthy <span style="color:#3bb5ff;"> ◼ </span> 
         Mild/Moderate <span style="color:#ff8019;">	◼ </span>  
         Severe/Critical <span style="color:#f00314;">	◼ </span>  
-        Sepsis <span style="color:#581845;">	◼ </span>  
+        Others <span style="color:#581845;">	◼ </span>  
         NA <span style="color:#aeb6bf;">	◼ </span>  
       </p>
       
@@ -104,7 +104,7 @@
         Healthy <span style="color:#3bb5ff;"> ◼ </span> 
         Mild/Moderate <span style="color:#ff8019;">	◼ </span>  
         Severe/Critical <span style="color:#f00314;">	◼ </span>  
-        Sepsis <span style="color:#581845;">	◼ </span>  
+        Others <span style="color:#581845;">	◼ </span>  
         NA <span style="color:#aeb6bf;">	◼ </span>  
       </p>
       
