Change the legend of teh scFeature

--- a/flaskstarter/templates/tasks/show_scfeature.html
+++ b/flaskstarter/templates/tasks/show_scfeature.html
@@ -87,11 +87,11 @@
     <div id="chart4legend" class="row justify-content-center" style="padding-top: 10px" hidden>
       <p>
         Patient status:
-        Healthy <span style="color:#3bb5ff;"> ◼ </span> 
-        Mild/Moderate <span style="color:#ff8019;">	◼ </span>  
-        Severe/Critical <span style="color:#f00314;">	◼ </span>  
-        Others <span style="color:#581845;">	◼ </span>  
-        NA <span style="color:#aeb6bf;">	◼ </span>  
+        <span style="color:#3bb5ff;"> ◼ </span> Healthy&nbsp;
+        <span style="color:#ff8019;"> ◼ </span> Mild/Moderate&nbsp; 
+        <span style="color:#f00314;"> ◼ </span> Severe/Critical&nbsp;   
+        <span style="color:#581845;"> ◼ </span> Others&nbsp; 
+        <span style="color:#aeb6bf;"> ◼ </span> NA&nbsp; 
       </p>
       
     </div>
@@ -101,11 +101,11 @@
     <div id="chart2legend" class="row justify-content-center" style="padding-top: 10px" hidden>
       <p>
         Patient status:
-        Healthy <span style="color:#3bb5ff;"> ◼ </span> 
-        Mild/Moderate <span style="color:#ff8019;">	◼ </span>  
-        Severe/Critical <span style="color:#f00314;">	◼ </span>  
-        Others <span style="color:#581845;">	◼ </span>  
-        NA <span style="color:#aeb6bf;">	◼ </span>  
+        <span style="color:#3bb5ff;"> ◼ </span> Healthy&nbsp;
+        <span style="color:#ff8019;"> ◼ </span> Mild/Moderate&nbsp; 
+        <span style="color:#f00314;"> ◼ </span> Severe/Critical&nbsp;   
+        <span style="color:#581845;"> ◼ </span> Others&nbsp; 
+        <span style="color:#aeb6bf;"> ◼ </span> NA&nbsp; 
       </p>
       
     </div>
