hide tooltip html explore but with text7

--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -239,7 +239,7 @@
   // Hide "explore" tooltip by Angela 041723  
   // polygonTemplate.tooltipHTML = '<b>{name}: {value}</b><br><a href="http://covidsc.d24h.hk/tasks/table_view?main=%7B%22Country%22%3A+%7B%22$in%22%3A+%5B%22{dataset}%22%5D%7D%7D">Explore</a>';
   polygonTemplate.fill = am4core.color("rgba(110, 166, 157, 0.5)");
-  //polygonTemplate.tooltipText = '<b>{name}: {value}</b>';
+  polygonTemplate.tooltipText = '<b>{name}: {value}</b>';
 
 
   // Create hover state and set alternative fill color
@@ -384,6 +384,7 @@
   series.tooltip.getFillFromObject = false;
   series.tooltip.background.fill = am4core.color("#FFFFFF");
   //series.columns.template.tooltipHTML = '<b>{type}: {pieces}</b><br><a href="http://covidsc.d24h.hk/tasks/table_view?main=%7B%22level2%22%3A+%22{type}%22%7D">Explore</a>';
+  series.columns.template.tooltipText = '<b>{type}: {pieces}</b>';
   series.tooltip.autoTextColor = false;
   series.tooltip.label.fill = am4core.color("#045547");
 }); // end am4core.ready()
