update scfeature button discription

--- a/flaskstarter/templates/frontend/data.html
+++ b/flaskstarter/templates/frontend/data.html
@@ -42,7 +42,7 @@
                 </tr>
                 <tr>
                 <td>Count data</td>
-                <td>Arunachalam</td>
+                <td>Arunachalam_2020</td>
                 <td>arunachalam</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/arunachalam/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -57,7 +57,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Bost</td>
+                <td>Bost_2021</td>
                 <td>bost</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/bost/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -72,7 +72,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Combat</td>
+                <td>Combat_2022</td>
                 <td>combat</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/combat/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -87,7 +87,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Combes</td>
+                <td>Combes_2021</td>
                 <td>combes</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/combes/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -102,22 +102,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Hoehn</td>
-                <td>hoehn</td>
-                <td>
-                  <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/hoehn/barcodes.tsv.gz">barcodes.tsv.gz</a>
-                  <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/hoehn/genes.tsv.gz">genes.tsv.gz</a>
-                  <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/hoehn/matrix.mtx.gz">matrix.mtx.gz</a>
-                </td>
-                <td>
-                  <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/integrated/hoehn/barcodes.tsv.gz">barcoes.tsv.gz</a>
-                  <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/integrated/hoehn/genes.tsv.gz">genes.tsv.gz</a>
-                  <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/integrated/hoehn/matrix.mtx.gz">matrix.mtx.gz</a>
-                </td>
-                </tr>
-                <tr>
-                <td> </td>
-                <td>Lee</td>
+                <td>Lee_2020</td>
                 <td>lee</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/lee/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -132,7 +117,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Liu</td>
+                <td>Liu_2021</td>
                 <td>liu</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/liu/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -147,7 +132,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Ramaswamy</td>
+                <td>Ramaswamy_2021</td>
                 <td>ramaswamy</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/ramaswamy/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -162,7 +147,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Ren</td>
+                <td>Ren_2021</td>
                 <td>ren</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/ren/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -177,7 +162,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Schulte-schrepping</td>
+                <td>Schulte-Schrepping_2020</td>
                 <td>schulte-schrepping</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/schulte-schrepping/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -192,7 +177,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Schuurman</td>
+                <td>Schuurman_2021</td>
                 <td>schuurman</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/schuurman/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -207,7 +192,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Sinha</td>
+                <td>Sinha_2022</td>
                 <td>sinha</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/sinha/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -222,7 +207,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Stephenson</td>
+                <td>Stephenson_2021</td>
                 <td>stephenson</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/stephenson/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -237,7 +222,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Su</td>
+                <td>Su_2020</td>
                 <td>su</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/su/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -252,7 +237,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Thompson</td>
+                <td>Thompso_2021</td>
                 <td>thompson</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/thompson/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -267,7 +252,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Unterman</td>
+                <td>Unterman_2022</td>
                 <td>unterman</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/unterman/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -282,7 +267,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Wilk</td>
+                <td>Wilk_2021</td>
                 <td>wilk</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/wilk/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -297,7 +282,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Yao</td>
+                <td>Yao_2021</td>
                 <td>yao</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/yao/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -312,7 +297,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Zhao</td>
+                <td>Zhao_2021</td>
                 <td>zhao</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/zhao/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -327,7 +312,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Zhu</td>
+                <td>Zhu_2020</td>
                 <td>zhu</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/zhu/barcodes.tsv.gz">barcodes.tsv.gz</a>
@@ -347,6 +332,16 @@
 {% endblock %}
 
 {% block scripts %}
+<style>
+  a {
+    color: #1CA68C;
+  }
+
+  a:hover {
+  color: #173533;
+  }
+
+</style>
 <script>
 $(document).ready(function () {
     $('#data_download_links').DataTable({
