--- a/flaskstarter/templates/layouts/header.html
+++ b/flaskstarter/templates/layouts/header.html
@@ -61,13 +61,13 @@
       <a class="nav-link" href="{{ url_for('frontend.tutorial') }}">Tutorial</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('frontend.contact_us') }}">Contact us</a>
+      <a class="nav-link" href="{{ url_for('frontend.contact_us') }}">Contact</a>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link" href="{{ url_for('frontend.signup') }}">Sign up</a>
-    </li>
+    </li> -->
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('frontend.login') }}">Login</a>
+      <a class="nav-link" href="{{ url_for('frontend.login') }}">Sign in</a>
     </li>
 
   </ul>
