Edit thompson in data.html

--- a/flaskstarter/templates/frontend/data.html
+++ b/flaskstarter/templates/frontend/data.html
@@ -237,7 +237,7 @@
                 </tr>
                 <tr>
                 <td> </td>
-                <td>Thompso_2021</td>
+                <td>Thompson_2021</td>
                 <td>thompson</td>
                 <td>
                   <a href="https://covidscope-public-repository.s3.ap-east-1.amazonaws.com/raw/thompson/barcodes.tsv.gz">barcodes.tsv.gz</a>
