--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -29,21 +29,21 @@
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group.png')}}" width="64" height="64" /></div>
             <div class="item2">
-                <h2 id="animatedCellCount">{{counting[4].count}}</h2>
+                <h2 id="animatedCellCount">50000000</h2>
             </div>
             <div class="item3">Cells</div>
         </div>
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group 38.png')}}" width="76" height="53" /></div>
             <div class="item2">
-                <h2 id="animatedDonorCount">{{counting[2].count}}</h2>
+                <h2 id="animatedDonorCount">1000</h2>
             </div>
             <div class="item3">Donors</div>
         </div>
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group 36.png')}}" width="64" height="64" /></div>
             <div class="item2">
-                <h2 id="animatedDatasetCount">{{counting[0].count}}</h2>
+                <h2 id="animatedDatasetCount">1</h2>
             </div>
             <div class="item3">Data sets</div>
         </div>
